@startuml
interface PropFactory {
  + createProp(int locationX, int locationY, int speedX, int speedY) : AbstractProp
}

class HpPropFactory {
  + createProp(...) : AbstractProp
}

class BulletPropFactory {
  + createProp(...) : AbstractProp
}

class BulletPlusPropFactory {
  + createProp(...) : AbstractProp
}

class BombPropFactory {
  + createProp(...) : AbstractProp
}

abstract class AbstractProp {
  + effect(HeroAircraft hero) : void
}

class HpProp {
  + effect(HeroAircraft hero) : void
}

class BulletProp {
  + effect(HeroAircraft hero) : void
}

class BulletPlusProp {
  + effect(HeroAircraft hero) : void
}

class BombProp {
  + loadTarget(List<EnemyAircraft>, List<BaseBullet>) : void
  + effect(HeroAircraft hero) : void
}

PropFactory <|-- HpPropFactory
PropFactory <|-- BulletPropFactory
PropFactory <|-- BulletPlusPropFactory
PropFactory <|-- BombPropFactory

AbstractProp <|-- HpProp
AbstractProp <|-- BulletProp
AbstractProp <|-- BulletPlusProp
AbstractProp <|-- BombProp

HpPropFactory --> HpProp : creates
BulletPropFactory --> BulletProp : creates
BulletPlusPropFactory --> BulletPlusProp : creates
BombPropFactory --> BombProp : creates
@enduml